docs: record the light algorithm research in STATUS.md
The research asked whether an algorithm from another engine would close
the gap to Minestom. It would not: the BFS already pushes levels onto
neighbours instead of pulling from all six, which is the advantage
attributed to Starlight. The gap sits in the preparation and the
collection around the search.

Adds the refuted leads (Starlight's border arrays, its data-holding gain,
the 12x/28x/37x figures, Phosphor, the absent literature, the Vector API
packaging trap), the rebuild measurements with their provenance marked,
and the correctness finding that calculateWithNeighbours writes back
eight ring chunks it only lit from inside the 3x3.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>